1. Сгруппировал классы 2. Сделал все поля задач приватными 3. Реализовал LinkedList для истории 4. Убрал комментированный код 5. Подрихтовал класс Task(убрал пробелы)